# OpenTraceView

./: main.cpp  meson.build
otv/: application.hpp  devicemanager.cpp  devicemanager.hpp  logging.cpp  mainwindow.cpp  session.cpp  session.hpp  storesession.cpp  storesession.hpp
otv/binding/: device.cpp  device.hpp  inputoutput.cpp  inputoutput.hpp
otv/data/: logicsegment.cpp  logicsegment.hpp  signalbase.hpp
otv/data/decode/: decoder.cpp
otv/devices/: device.cpp  device.hpp  hardwaredevice.cpp  inputfile.hpp  sessionfile.cpp
otv/dialogs/: connect.cpp  connect.hpp  inputoutputoptions.hpp  settings.cpp  storeprogress.hpp
otv/popups/: channels.hpp  deviceoptions.cpp
otv/prop/: bool.cpp  double.cpp  enum.cpp  int.cpp  string.cpp
otv/toolbars/: mainbar.cpp  mainbar.hpp
otv/views/: viewbase.cpp
otv/views/trace/: analogsignal.cpp  flag.cpp  logicsignal.cpp  signal.cpp  view.cpp
otv/widgets/: devicetoolbutton.cpp  exportmenu.cpp  exportmenu.hpp  importmenu.cpp  importmenu.hpp
test/data/: decoderstack.cpp
